<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.admin.isb.hermes5</groupId>
	<artifactId>hermes5-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Hermes - Parent POM</name>
	<description>
    Parent POM for all sub-modules. This POM defines all dependency
    and plugin versions in a central place as well as other common
    project settings.
  </description>

	<organization>
		<name>Zuehlke - Empowering Ideas</name>
		<url>http://www.zuehlke.com</url>
	</organization>

	<contributors>

		<contributor>
			<email>rbe@zuehlke.com</email>
			<name>Roman Bertolami</name>
			<organization>Zuehlke</organization>
			<organizationUrl>http://www.zuehlke.com</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+2</timezone>
		</contributor>
		<contributor>
			<email>bdo@zuehlke.com</email>
			<name>Benjamin Doerig</name>
			<organization>Zuehlke</organization>
			<organizationUrl>http://www.zuehlke.com</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+2</timezone>
		</contributor>
		<contributor>
			<email>nioe@zuehlke.com</email>
			<name>Nicolas Oeschger</name>
			<organization>Zuehlke</organization>
			<organizationUrl>http://www.zuehlke.com</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+2</timezone>
		</contributor>
	</contributors>
	<repositories>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>
	</repositories>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>xls</nonFilteredFileExtension>
							<nonFilteredFileExtension>png</nonFilteredFileExtension>
							<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
							<nonFilteredFileExtension>doc</nonFilteredFileExtension>
							<nonFilteredFileExtension>docx</nonFilteredFileExtension>
							<nonFilteredFileExtension>dotx</nonFilteredFileExtension>
							<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
							<nonFilteredFileExtension>eot</nonFilteredFileExtension>
							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
							<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
				</plugin>

				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.3</version>
				</plugin>

				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.1.1</version>
					<configuration>
						<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>


				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<argLine>-Xms256m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.jboss.as.plugins</groupId>
					<artifactId>jboss-as-maven-plugin</artifactId>
					<version>7.1.1.Final</version>
				</plugin>


				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.8</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
		<jboss.home>${env.JBOSS_HOME}</jboss.home>
		<infinispan.version>5.1.2.FINAL</infinispan.version>
		<commons-fileupload.version>1.2.2</commons-fileupload.version>
		<commons-io.version>2.4</commons-io.version>
		<dozer.version>5.3.2</dozer.version>
		<hsqldb.version>2.2.8</hsqldb.version>
		<blueprint-css.version>1.0</blueprint-css.version>
		<hibernate.version>4.0.1.Final</hibernate.version>
		<hibernate.validator.version>4.2.0.Final</hibernate.validator.version>
		<javax.javaee-web-api.version>7.0</javax.javaee-web-api.version>
		<jaxb-ri.version>2.2.4</jaxb-ri.version>
		<wildfly-spec-api.version>8.0.0.Final</wildfly-spec-api.version>
		<wildfly-maven-plugin.version>1.0.1.Final</wildfly-maven-plugin.version>
		<junit.version>4.9</junit.version>
		<jtidy.version>r938</jtidy.version>
		<mockito.version>1.8.5</mockito.version>
		<mybatis.migrations.version>3.0.5</mybatis.migrations.version>
		<mysql-connector-java.version>5.1.21</mysql-connector-java.version>
		<primefaces.version>3.3.1</primefaces.version>
		<selenium.version>2.21.0</selenium.version>
		<slf4j.version>1.7.6</slf4j.version>
		<poi.version>3.9</poi.version>
		<docx4j.version>2.8.1</docx4j.version>
		<jdepend.version>2.9.1</jdepend.version>
		<velocity.version>1.7</velocity.version>
		<batik.bridge.version>1.6-1</batik.bridge.version>
		<aws-java-sdk.version>1.6.6</aws-java-sdk.version>
		<lucene.version>4.7.0</lucene.version>
		<tika.version>1.4</tika.version>
		<mpxj.version>4.3.0</mpxj.version>
	</properties>

</project>
